Updated the controller, added a Razor page, updated the navigation.

--- a/YouTubeApi/appsettings.json
+++ b/YouTubeApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=netAnalyzer.mssql.somee.com;Database=netAnalyzer;User Id=\tgigachurka_SQLLogin_1;Password=ranpx9sqr9;TrustServerCertificate=True;"
+  },
+
   "AllowedHosts": "*"
 }
