registration  is not working

--- a/YouTubeApi/appsettings.json
+++ b/YouTubeApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=netAnalyzer.mssql.somee.com;Database=netAnalyzer;User Id=\tgigachurka_SQLLogin_1;Password=ranpx9sqr9;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=netAnalyzer.mssql.somee.com;Database=netAnalyzer;User Id=gigachurka_SQLLogin_1;Password=ranpx9sqr9;TrustServerCertificate=True;"
   },
 
   "AllowedHosts": "*"
